--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <artifactId>wtcp-build</artifactId>
         <groupId>cn.com.wanwei</groupId>
-        <version>2.1.0</version>
+        <version>2.1.1</version>
         <relativePath/>
     </parent>
 
@@ -29,6 +29,11 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>cn.com.wanwei</groupId>
+            <artifactId>wtcp-dynamic-form</artifactId>
+        </dependency>
 
         <!-- oauth2 -->
         <dependency>
